--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 	     </head>
          
 <body>
+
+<img src="https://i.pinimg.com/originals/8b/9f/a7/8b9fa7e28b994241caede1258c216f2b.jpg" width="100px" height="100px">
+
 	<a href='https://diamondrolls.github.io/play/'> <div class='thorshammer'></div></a>
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
