--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
                      <a href='https://diamondrolls.github.io/merch/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
-			  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='music'><h7 class="neon" data-text="Music">Music</h7></div></a>
+			  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='music'><h7 class="neon" data-text="Upload">Upload</h7></div></a>
  <a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 	</div>
 </li>
