--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 
-	<a href='https://diamondrolls.github.io/play/'> <div class='thorshammer'></div></a>
+	href='https://diamondrolls.github.io/diamondnews/'><div class='iamkeiannaoptions'></div></a>
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
 
@@ -66,8 +66,6 @@
 
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
                      <a href='https://diamondrolls.github.io/shoes/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
-			  <a href='https://diamondrolls.github.io/diamondnews/'><div class='music'><h7 class="neon" data-text="Upload">Upload</h7></div></a>
- <a href='https://diamondrolls.github.io/thepremiumway/'><div class='stocks3'><h7 class="neon" data-text="Videos">Videos</h7></div></a>
 	</div>
 </li>
 </ul>
