--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 <body>
 
 
-	<a href='https://diamondrolls.github.io/diamondnews/'><div class='ikeannaoptions'><h7 class="neon" data-text="Login">Login</h7></div></a>
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
 
@@ -66,6 +65,8 @@
 
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
                      <a href='https://diamondrolls.github.io/shoes/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
+		<a href='https://diamondrolls.github.io/thepremiumway/'><div class='ikeannaoptions'><h7 class="neon" data-text="Login">Login</h7></div></a>
+
 	</div>
 </li>
 </ul>
