--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		 
 
-                     <a href='https://diamondrolls.github.io/shoes/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
+                     <a href='https://diamondrolls.github.io/merch/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
 
         
      
