--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
-
+<a href="https://diamondrolls.github.io/stocks/"><div class="headerimage"> <h7 class="neon" data-text="Join Our Investment Clubs">Join Our Investment Clubs</h7></div></a>
 <ul>
 
 	<button><li>
