--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-	<div class='planeholder'><div class='plane2'>💰</div><div class='plane3'>💰</div><div class='plane4'>💰</div><div class='plane5'>💰</div></div>
+	<div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
 	
 	<div class='plane1'></div> <br>
