--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 <body>
 
 
-        
-     
-
-
+       <div class='plain'> 
 
 	<div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
@@ -52,7 +49,7 @@
 <br>
 	<br>
 	
-	
+	</div>
 
   	<script>
 
