--- a/index.html
+++ b/index.html
@@ -40,16 +40,12 @@
 <body>
 
 
-       <div class='plain'> 
+	
+	
+	<div class='plane1'></div> 
 
-	<div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
-	
-	<div class='plane1'></div> <br>
-<br>
-	<br>
-	
-	</div>
+
 
   	<script>
 
