--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
          
 <body>
-
-
+        <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
+       
 	<div class='planeholder'></div>
 	<div class='lilfacebook'></div><div class='twod'></div>
 	<div class='plane1'></div> </div> 
