--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
 	<div class='planeholder'>
-	<div class='lilfacebook'></div><div class='twod'></div>
+	<div class='aiholder'><div class='lilfacebook'></div><div class='twod'></div></div>
 	<div class='plane1'></div> </div> 
 
 	
