--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <body>
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
-	<div class='planeholder'>
+	<center><div class='planeholder'>
 	<div class='aiholder'><div class='lilfacebook'></div><div class='twod'></div></div>
-	<div class='plane1'></div> </div> 
+	<div class='plane1'></div> </div> </center>
 
 	
 
