--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
 	<center><div class='planeholder'>
-	<div class='aiholder'><div class='lilfacebook'></div><div class='twod'></div></div>
+	<div class='aiholder'><div class='twod'></div></div>
 	<div class='plane1'></div> </div> </center>
-	<center><div class='lilfacebook'></div></center>
+	<div class='aiholder'><div class='lilfacebook'></div></div>
 
 	
 
