--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
 	<center><div class='planeholder'>
-	<div class='aiholder'><div class='twod'></div></div>
+	<div class='twod'></div>
 	<div class='plane1'></div> </div> </center>
 	<div class='lilfacebook'></div>
 
