--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <body>
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
-	<center><div class='planeholder'>
-	<div class='twod'></div>
-	<div class='plane1'></div> </div> </center>
+	<div class='planeholder'>
+	<center><div class='twod'></div></center>
+	<div class='plane1'></div> </div>
 	<div class='lilfacebook'><div class='mouth'></div></div>
 
 	
