--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
 
          
 <body>
-        <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
-       <div class='words'> <h1 class="neon" data-text=" Lil Facebook Martian Kings "> Lil Facebook Martian Kings</h1> </div>
-	<div class='planeholder'>
-	<center><div class='twod'></div></center>
-	<div class='plane1'></div> </div>
-	<div class='lilfacebook'><div class='mouth'></div></div>
+       	<div class='twod'></div>
+	<div class='lilfacebook'></div>
 
 	
 
