--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
          
 <body>
-       
-	<div class='lilfacebook'></div>
+       <div class="sun"></div> <div class="sun2"></div> <div class="sun3"></div>
+	<center><div class='lilfacebook'></div></center>
 
 	
 
